--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -34,8 +34,10 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Install Poetry
-        run: pip install poetry
+      - name: Install Poetry and Export Plugin
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
 
       - name: Install system dependencies for wxPython
         # This step is CRUCIAL. wxPython requires GTK+ system libraries
@@ -44,14 +46,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libxtst-dev
 
-      - name: Configure Poetry and install dependencies
+      - name: Install dependencies with pip
         env:
           # Use the exact find-links URL from Jenkinsfile to get pre-compiled wxPython wheels
           # and avoid a lengthy compilation. This requires the ubuntu-24.04 runner.
           PIP_FIND_LINKS: "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/"
         run: |
-          poetry config virtualenvs.in-project true
-          poetry install --with doc --no-root
+          # Export dependencies (including doc group) from poetry.lock to use pip.
+          # This is more reliable for wxPython than `poetry install`.
+          poetry export --with doc -f requirements.txt --output requirements.txt --without-hashes
+          pip install -r requirements.txt
 
       - name: Build documentation with Sphinx
         # NOTE: This command assumes your documentation source is in 'docs/source'.
