--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
+          libnotify-dev \
           libgtk-3-dev \
           libwebkit2gtk-4.1-dev \
           libxtst-dev \
