--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -58,15 +58,19 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build documentation with Sphinx
-        # NOTE: This command assumes your documentation source is in 'docs/source'.
-        # If your folder is different (e.g., 'docs/'), modify the path below.
-        # The source directory is 'docs', not 'docs/source', as indicated by the error.
-        run: poetry run sphinx-build -b html docs build/html
+        # This step replicates the logic from the `generate_sphinx_doc.sh` script
+        # and the Jenkins `pythonGenerateDocsSphinx` function.
+        run: |
+          # 1. Auto-generate API documentation from docstrings in the 'src' directory.
+          sphinx-apidoc -f -M -o docs/source src
+          # 2. Build the HTML using the Makefile in the 'docs' directory.
+          make -C docs html
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'build/html'
+          # The Makefile in 'docs' creates the output in 'docs/build/html'
+          path: 'docs/build/html'
 
       - name: Deploy to GitHub Pages
         id: deployment
