--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -61,16 +61,16 @@ jobs:
         # This step replicates the logic from the `generate_sphinx_doc.sh` script
         # and the Jenkins `pythonGenerateDocsSphinx` function.
         run: |
-          # 1. Auto-generate API documentation from docstrings in the 'src' directory.
+          # 1. Auto-generate API documentation from docstrings in the 'src' directory into 'docs/source'.
           sphinx-apidoc -f -M -o docs/source src
-          # 2. Build the HTML using the Makefile in the 'docs' directory.
-          make -C docs html
+          # 2. Build the HTML using the Makefile, which is located in 'docs/source'.
+          make -C docs/source html
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          # The Makefile in 'docs' creates the output in 'docs/build/html'
-          path: 'docs/build/html'
+          # The Makefile in 'docs/source' creates the output in 'docs/source/build/html'.
+          path: 'docs/source/build/html'
 
       - name: Deploy to GitHub Pages
         id: deployment
