--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -57,14 +57,14 @@ jobs:
           poetry export --with doc -f requirements.txt --output requirements.txt --without-hashes
           pip install -r requirements.txt
 
-      - name: Build documentation with Sphinx
+      - name: Build Documentation
         # This step replicates the logic from the `generate_sphinx_doc.sh` script
         # and the Jenkins `pythonGenerateDocsSphinx` function.
+        # We set the working directory to 'docs' so the commands run from the correct place.
+        # working-directory: ./docs
         run: |
-          # 1. Auto-generate API documentation from docstrings in the 'src' directory into 'docs/source'.
-          sphinx-apidoc -f -M -o docs/source src
-          # 2. Build the HTML using the Makefile in the 'docs' directory.
-          make -C docs html
+              generate_sphinx_doc.sh
+
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
