--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -57,20 +57,16 @@ jobs:
           poetry export --with doc -f requirements.txt --output requirements.txt --without-hashes
           pip install -r requirements.txt
 
-      - name: Build Documentation
-        # This step replicates the logic from the `generate_sphinx_doc.sh` script
-        # and the Jenkins `pythonGenerateDocsSphinx` function.
-        # We set the working directory to 'docs' so the commands run from the correct place.
-        # working-directory: ./docs
+      - name: Build documentation with user script
         run: |
-              generate_sphinx_doc.sh
-
+          chmod +x generate_sphinx_doc.sh
+          ./generate_sphinx_doc.sh
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          # The Makefile in 'docs' creates the output in 'docs/build/html'.
-          path: 'docs/build/html'
+          # The script generates output in 'build/html' from the project root.
+          path: 'build/html'
 
       - name: Deploy to GitHub Pages
         id: deployment
