--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -38,6 +38,7 @@ jobs:
         sudo apt-get install -y \
           libnotify-dev \
           libgtk-3-dev \
+          libsdl2-dev \
           libwebkit2gtk-4.1-dev \
           libxtst-dev \
           xvfb \
