--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -12,6 +12,8 @@ jobs:
     name: Build Wheel
     # Use Ubuntu 24.04 to match the Jenkins environment and ensure wxPython wheel compatibility.
     runs-on: ubuntu-24.04
+    permissions:
+      contents: write # Add this line to grant write permissions for contents
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
