--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -7,13 +7,15 @@ on:
   # Allows running this workflow manually from the GitHub Actions tab
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build Wheel
     # Use Ubuntu 24.04 to match the Jenkins environment and ensure wxPython wheel compatibility.
     runs-on: ubuntu-24.04
-    permissions:
-      contents: write # Add this line to grant write permissions for contents
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
