feat: Improve UI test stability and database coverage
- Refactored UI tests (`tests/ui/test_document_view_panel.py`) to use `pytest` fixtures for `wx.App` management, resolving `PyNoAppError` and improving test stability.
- Added `pytest.mark.ui` markers to UI test files (`tests/ui/test_actions_panel.py`, `tests/ui/test_grid_panel.py`, `tests/ui/test_main_app_ui.py`) and registered the marker in `pytest.ini` for better test organization and selective execution.
- Introduced new UI test file `tests/ui/test_main_app_logic.py` with initial tests for `DevilDexApp`'s UI logic, including `OnInit` and log panel toggling.
- Enhanced database test coverage (`tests/test_database.py`) by adding tests for:
    - `PackageInfo.project_urls` setter edge cases.
    - `DatabaseManager.init_db` re-initialization logging.
    - `SQLAlchemyError` handling in various `DatabaseManager` methods (`get_docsets_for_project_view`, `get_all_registered_projects_details`, `get_project_details_by_name`).
    - `DatabaseNotInitializedError` and warning logging in `DatabaseManager.get_session`.
    - `ValueError` handling for missing project details in `_ensure_registered_project_and_association`.
    - Exception handling during `session.commit` in `ensure_package_entities_exist`.
- Corrected `src/devildex/database.py` to ensure consistent logging of database initialization.

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -79,6 +79,13 @@ jobs:
           --html=test_report/index.html \
           --junitxml=test-results.xml
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }} # Required for private repos or if you want to use a specific token
+        directory: ./ # Directory where coverage.xml is located
+        fail_ci_if_error: true # Optional: Don't fail CI if Codecov upload fails
+
     - name: Upload Test Report (HTML)
       # Always run this step, even if tests fail, to see the report.
       if: always()
