--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 addopts = -n auto
 markers =
     focus: mark to execute only a single test
+    ui: mark tests as UI related
 
 log_cli = true
 log_cli_level = INFO
