--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "devildex"
 version = "0.1.0"
-description = ""
+description = "A desktop application for discovering, generating, and viewing Python package documentation (docsets). It scans your projects for dependencies, builds their documentation, and provides a unified interface to browse it all locally."
 authors = [
     {name = "magowiz",email = "magowiz@gmail.com"}
 ]
