--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,7 @@ log_cli = true
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(name)s:%(lineno)s --- %(message)s
 log_cli_date_format = %H:%M:%S
+
+[coverage:run]
+omit =
+    src/table_wx.py
