Fix: Add missing wxPython system dependencies to GitHub Actions workflow

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -42,7 +42,11 @@ jobs:
           libwebkit2gtk-4.1-dev \
           libxtst-dev \
           xvfb \
-          bzr
+          bzr \
+          python3-gi \
+          python3-gi-cairo \
+          python3-wxgtk4.0 \
+          python3-wxgtk-webview4.0
 
     - name: Install dependencies and project
       env:
