--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -2,10 +2,9 @@
 name: Build Python Wheel
 
 on:
-  release:
-    types: [published] # Trigger on new GitHub Releases being published
-  # Allows running this workflow manually from the GitHub Actions tab
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Python Tests"]
+    types: [completed]
 
 permissions:
   contents: write
@@ -13,6 +12,7 @@ permissions:
 jobs:
   build:
     name: Build Wheel
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     # Use Ubuntu 24.04 to match the Jenkins environment and ensure wxPython wheel compatibility.
     runs-on: ubuntu-24.04
     
