--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -2,9 +2,9 @@
 name: Publish Documentation
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Python Tests"]
+    types: [completed]
 
 # Permissions for the workflow
 permissions:
@@ -18,6 +18,7 @@ concurrency:
 jobs:
   build-docs:
     name: Build Documentation
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     # Use Ubuntu 24.04 to match the Jenkins environment and ensure wxPython wheel compatibility.
     runs-on: ubuntu-24.04
     steps:
