--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -76,7 +76,7 @@ jobs:
       # equivalent on Linux, as GitHub runners have Xvfb pre-installed.
       # The --html and --cov flags generate reports that we then upload as artifacts.
       run: | # We don't need `poetry run` as dependencies are in the global site-packages.
-        xvfb-run pytest --verbose \
+        xvfb-run pytest --verbose --reruns 3 \
           --cov=src \
           --cov-report=xml \
           --cov-report=html:coverage_report \
