fix: Install wxPython dependencies in pytest_x11 Dockerfile
Installs missing system libraries (libjpeg-turbo-devel, libpng-devel, libtiff-devel, gstreamer1-plugins-base-devel, libnotify-devel, freeglut-devel, webkit2gtk4.0-devel) required for wxPython to function correctly in the Jenkins test environment.

--- a/ci_dockerfiles/pytest_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_x11/Dockerfile
@@ -5,26 +5,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8
 
-RUN dnf update -y && \
-    dnf install -y \
-    python \
-    python-devel \
-    python-pip \
-    gcc \
-    gcc-c++ \
-    git \
-    curl \
-    lftp \
-    xorg-x11-server-Xvfb \
-    xdg-utils \
-    jq \
-    SDL2-devel \
-    xclip \
-    xorg-x11-xauth \
-    patchelf \
-    glib2-devel \
-    cmake cairo-devel cairo-gobject-devel gawk gtk3-devel \
-    && dnf clean all
+RUN dnf update -y &&     dnf install -y     python     python-devel     python-pip     gcc     gcc-c++     git     curl     lftp     xorg-x11-server-Xvfb     xdg-utils     jq     SDL2-devel     xclip     xorg-x11-xauth     patchelf     glib2-devel     cmake cairo-devel cairo-gobject-devel gawk gtk3-devel     libjpeg-turbo-devel     libpng-devel     libtiff-devel     gstreamer1-plugins-base-devel     libnotify-devel     freeglut-devel     webkit2gtk4.0-devel     && dnf clean all
 
 ENV PATH="/root/.local/bin:${PATH}"
 
