fix: Install Poetry using pipx in Ubuntu Dockerfile
Modifies the pytest_ubuntu_x11 Dockerfile to install Poetry using pipx instead of pip. This addresses the PEP 668 error encountered when installing Poetry into a system Python environment on Ubuntu.

--- a/ci_dockerfiles/pytest_ubuntu_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_ubuntu_x11/Dockerfile
@@ -23,8 +23,8 @@ RUN apt-get update && \
 
 # Install Poetry and Export Plugin
 RUN apt-get update && \
-    apt-get install -y python3-pip && \
-    pip install poetry && \
+    apt-get install -y python3-pip pipx && \
+    pipx install poetry && \
     poetry self add poetry-plugin-export && \
     rm -rf /var/lib/apt/lists/*
 
