fix: Use full path for poetry self add in Ubuntu Dockerfile
Modifies the pytest_ubuntu_x11 Dockerfile to use the full path to the poetry executable when running poetry self add poetry-plugin-export. This resolves the "poetry: not found" error by ensuring the command can locate the poetry executable after pipx installation.

--- a/ci_dockerfiles/pytest_ubuntu_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_ubuntu_x11/Dockerfile
@@ -25,7 +25,7 @@ RUN apt-get update && \
 RUN apt-get update && \
     apt-get install -y python3-pip pipx && \
     pipx install poetry && \
-    poetry self add poetry-plugin-export && \
+    /root/.local/bin/poetry self add poetry-plugin-export && \
     rm -rf /var/lib/apt/lists/*
 
 # Set up PATH for poetry
