feat: Add virtual environment setup to Ubuntu Dockerfile
Modifies the pytest_ubuntu_x11 Dockerfile to create and use a virtual environment (/opt/venv) for Python dependencies. This resolves the externally-managed-environment error (PEP 668) by ensuring pip installs packages into an isolated environment, preventing conflicts with system packages.

--- a/ci_dockerfiles/pytest_ubuntu_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_ubuntu_x11/Dockerfile
@@ -29,4 +29,10 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Set up PATH for poetry
-ENV PATH="/root/.local/bin:/usr/local/bin:${PATH}"
+ENV PATH="/root/.local/bin:${PATH}"
+
+# Create a virtual environment and install dependencies into it
+ENV VIRTUAL_ENV=/opt/venv
+ENV PATH="/opt/venv/bin:${PATH}"
+RUN python3 -m venv ${VIRTUAL_ENV} && \
+    ${VIRTUAL_ENV}/bin/pip install --upgrade pip
