initial mcp implementation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ dependencies = [
     "pydoctor (>=25.4.0,<26.0.0)",
     "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl",
     "fastmcp (>=2.12.2,<3.0.0)",
+    "fastapi (>=0.116.1,<0.117.0)",
+    "uvicorn (>=0.35.0,<0.36.0)",
+]
+
+[tool.poetry]
+packages = [
+    { include = "devildex", from = "src" }
 ]
 
 [tool.poetry.group.packaging.dependencies]
