--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ addopts = -n auto
 markers =
     focus: mark to execute only a single test
     ui: mark tests as UI related
+    integration: mark tests as integration tests
 
 log_cli = true
 log_cli_level = INFO
