Fix: Address various linting issues and minor refactorings
This commit addresses a range of linting issues identified by MegaLinter, including:
- Corrected `PT006` errors in `pytest.mark.parametrize` arguments.
- Changed hardcoded bind address from `0.0.0.0` to `127.0.0.1` for the MCP server.
- Applied various minor refactorings and style fixes as suggested by linters (e.g., `SIM108`).
- Prepared for future linting configuration by attempting to exclude theme-related files and enable Poetry dependency installation (though these specific config changes were not applied by the agent).

Further work is needed to address remaining linting issues, especially docstrings, type annotations, and complex functions.

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -15,7 +15,7 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     # Use Ubuntu 24.04 to match the Jenkins environment and ensure wxPython wheel compatibility.
     runs-on: ubuntu-24.04
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install Poetry and Export Plugin
         run: |
