remove wrong --group option from pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -n auto --dist=loadgroup --group=ui:ui
+addopts = -n auto --dist=loadgroup
 markers =
     focus: mark to execute only a single test
     ui: mark tests as UI related
