--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "fastmcp (>=2.12.2,<3.0.0)",
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
+    "markdownify (>=1.2.0,<2.0.0)",
 ]
 
 [tool.poetry]
