--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ markers =
     focus: mark to execute only a single test
     ui: mark tests as UI related
     integration: mark tests as integration tests
+    mcp_config: mark tests that configure MCP server behavior
 
 log_cli = true
 log_cli_level = INFO
