--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ black = "^25.1.0"
 [project.scripts]
 devildex = "devildex.main:main"
 devildex-register-project = "devildex.utils.companion:main"
+devildex-gemini-setup = "devildex.setup.gemini_cli:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
