--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ typeguard = "^4.4.4"
 requests = "^2.32.5"
 pytest-mock = "^3.14.1"
 pytest-asyncio = "^1.1.0"
+aiofiles = "^24.1.0"
 
 [tool.poetry.group.doc.dependencies]
 sphinx = "^8.2.3"
