--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 addopts = -n auto --dist=loadgroup
+norecursedirs = docset
 markers =
     focus: mark to execute only a single test
     ui: mark tests as UI related
