fix(ci): Trigger build-wheel workflow on tag push

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -2,9 +2,9 @@
 name: Build Python Wheel
 
 on:
-  workflow_run:
-    workflows: ["Python Tests"]
-    types: [completed]
+  push:
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
