--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -57,4 +57,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*.whl # Upload all .whl files from the dist directory
-          token: ${{ secrets.GITHUB_TOKEN }} # GitHub token for authentication
+          token: ${{ secrets.PAT_TOKEN }} # Use your PAT here
