--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -56,12 +56,14 @@ jobs:
       - name: Copy pyproject.toml.wx to pyproject.toml
         run: cp pyproject.toml.wx pyproject.toml
 
+      - name: Install Poetry
+        run: pip install poetry
+
       - name: Install Poetry and Packaging Dependencies
         run: |
-          pip install poetry
           poetry self add poetry-plugin-export
       - name: Update poetry.lock
-        run: poetry lock --no-update
+        run: poetry lock
       - run: |
           poetry install --only packaging # Install packaging dependencies
           poetry install # Install the main project and its regular dependencies
