--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "markdownify (>=1.2.0,<2.0.0)",
+    "pyinstaller (>=6.16.0,<7.0.0)",
 ]
 
 [tool.poetry]
