fix(ci): Clear poetry cache before lock to ensure correct dependency resolution

--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -72,7 +72,9 @@ jobs:
 
 
       - name: Update poetry.lock
-        run: poetry lock
+        run: |
+          poetry cache clear --all pypi
+          poetry lock
 
       - name: Install Project Dependencies
         run: poetry install
