--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -80,7 +80,7 @@ jobs:
         run: poetry install
 
       - name: Generate requirements.txt
-        run: poetry export -f requirements.txt --output requirements.txt --without-hashes
+        run: poetry self add poetry-export-plugin && poetry export -f requirements.txt --output requirements.txt --without-hashes
       - run: |
           poetry install --only packaging # Install packaging dependencies
           poetry install # Install the main project and its regular dependencies
