--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -120,19 +120,19 @@ jobs:
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v4
         with:
-          name: devildex-windows-build
+          name: devildex-${{ matrix.os }}-build
           path: dist/windows/
 
       - name: Upload macOS Artifact
         if: runner.os == 'macOS'
         uses: actions/upload-artifact@v4
         with:
-          name: devildex-macos-build
+          name: devildex-${{ matrix.os }}-build
           path: dist/macos/
 
       - name: Upload Linux Artifact
         if: runner.os == 'Linux'
         uses: actions/upload-artifact@v4
         with:
-          name: devildex-linux-build
+          name: devildex-${{ matrix.os }}-build
           path: dist/linux/
