--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -22,6 +22,9 @@ jobs:
           name: devildex-${{ matrix.os }}-build
           path: build/
 
+      - name: List downloaded files
+        run: ls -R build/
+
       - name: Test Built Application
         run: |
           if [ "${{ runner.os }}" == "Windows" ]; then
